# jellyfin-db-sync

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  index.yaml  jellyfin-db-sync-0.0.6.tgz  jellyfin-db-sync-0.0.7.tgz  jellyfin-db-sync-0.0.8.tgz  pyproject.toml  tox.ini
.github/: copilot-instructions.md
.github/workflows/: build.yaml  ci.yaml  helm-release.yaml  release.yaml  test.yaml
charts/jellyfin-db-sync/: Chart.yaml  README.md  values.yaml
charts/jellyfin-db-sync/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
scripts/: release.sh
src/jellyfin_db_sync/: __init__.py  config.py  database.py  main.py  models.py
src/jellyfin_db_sync/api/: __init__.py  health.py  status.py  webhook.py
src/jellyfin_db_sync/jellyfin/: __init__.py  client.py
src/jellyfin_db_sync/sync/: __init__.py  engine.py
src/jellyfin_db_sync/web/: __init__.py  ui.py
src/jellyfin_db_sync/web/static/: index.html
src/jellyfin_db_sync/web/static/css/: styles.css
src/jellyfin_db_sync/web/static/js/: app.js
tests/: __init__.py  test_config.py  test_database.py  test_jellyfin_client.py  test_models.py  test_queue.py  test_sync_engine.py  test_webhook.py  test_webhook_payload.py
