[project]
name = "jellyfin-db-sync"
version = "0.0.2"
description = "Bidirectional sync service for multiple Jellyfin instances"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "lnking" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "black>=24.0.0",
    "types-PyYAML>=6.0.0",
    "tox>=4.0.0",
]

[project.scripts]
jellyfin-db-sync = "jellyfin_db_sync.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jellyfin_db_sync"]

[tool.ruff]
target-version = "py311"
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "SIM118",
    "SIM401"
] # aiosqlite Row doesn't support .get() or `in dict` directly

[tool.ruff.lint.per-file-ignores]
# Ignore line length in UI file (contains HTML/CSS/JS strings)
"src/jellyfin_db_sync/web/ui.py" = ["E501"]

[tool.ruff.format]
# Use black-compatible formatting
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 119
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aiosqlite.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/jellyfin_db_sync"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
fail_under = 0
